--- a/index.html
+++ b/index.html
@@ -1,269 +1,66 @@
-<?php 
-session_start(); 
-?> 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
-<html xmlns="http://www.w3.org/1999/xhtml"> 
-<head> 
-<title>Alumni Website</title> 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-<link href="style.css" rel="stylesheet" type="text/css" /> 
-<script type="text/javascript" src="js/jquery-1.3.2.min.js"></script> 
-<script type="text/javascript" src="js/script.js"></script> 
-<script type="text/javascript" src="js/cufon-yui.js"></script> 
-<script type="text/javascript" src="js/arial.js"></script> 
-<script type="text/javascript" src="js/cuf_run.js"></script> 
-<style type="text/css"> 
-<!-- 
-body { 
-background-image: url(); 
-} --> 
-</style></head> 
-<body> 
-<!-- START PAGE SOURCE --> 
-<div class="main"> 
-45 
-<div class="header_block"> 
-<div class="header_resize"> 
-<div class="clr"></div> 
-</div> 
-<div class="menu_nav"> 
-<ul> 
-<li class="active"><a href="alumni_home">Home</a></li> 
-<li><a href="profile_update">Update Profile</a></li> 
-<li><a href="view_careers">View Careers</a></li> 
-<div class="dropdown"> 
-<strong> 
-<button class="dropbtn">View</button> 
-</strong><strong></strong> 
-<div class="dropdown-content"> 
-<a href="view_event">View Events</a> 
-<a href="view_news">View News</a> 
-<a href="view_notify">View Notifications</a> 
-</div> 
-</div> 
-</ul> 
-</div> 
-<div class="menu_nav-right"> 
-<ul> 
-46 
-<a href="index">Log Out</a> 
-</ul> 
-</div> 
-<div class="clr"></div> 
-</div> 
-</div> 
-<div class="clr"></div> 
-<div class="header"> 
-<div class="logo"> 
-<h1><a href="#">ALUMNI <span>SITE </span><small>Get in Touch 
-easily</small></a></h1> 
-</div> 
-<div class="clr"></div> 
-</div> 
-<!--    <div class="mainbar" align="center">   -->    
-<div class="content" align="center"> 
-<?php 
-echo "WELCOME " . $_SESSION["name"] . "<br>"; 
-?> 
-</div> 
-</div> 
-47 
-</form> 
-</div> 
-</div> 
-<div class="footer"> 
-<div class="footer_resize"> 
-<!--     
-<p class="lf"> Copyright &copy; 2019 Alumni Website- All Rights 
-Reserved</p> -->    
-<p class="rf">&nbsp;</p> 
-<div class="clr"></div> 
-</div> 
-</div> 
-<!-- END PAGE SOURCE --> 
-<div align=center></div></body> 
-</html> 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
-<html xmlns="http://www.w3.org/1999/xhtml"> 
-<head> 
-<title>Alumni Website</title> 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-<link href="style.css" rel="stylesheet" type="text/css" /> 
-<script type="text/javascript" src="js/jquery-1.3.2.min.js"></script> 
-<script type="text/javascript" src="js/script.js"></script> 
-<script type="text/javascript" src="js/cufon-yui.js"></script> 
-<script type="text/javascript" src="js/arial.js"></script> 
-48 
-<script type="text/javascript" src="js/cuf_run.js"></script> 
-<style type="text/css"> 
-<!-- 
-body { 
-background-image: url(); 
-} --> 
-</style></head> 
-<body> 
-<!-- START PAGE SOURCE --> 
-<div class="main"> 
-<div class="header_block"> 
-<div class="header_resize"> 
-<div class="clr"></div> 
-</div> 
-<div class="menu_nav"> 
-<ul> 
-<li><a href="admin_home">Home</a></li> 
-<li><a href="new_alumni">Add Alumni</a></li> 
-<li><a class="drop" href="post_event">Post Events</a>   
-<li></li> 
-<li class="active"><a href="careers">Careers</a></li> 
-<li><a href="email">SMS/E-MAIL</a></li> 
-</ul> 
-</div> 
-<div class="menu_nav-right"> 
-<ul> 
-49 
-<a href="index">Log Out</a> 
-</ul> 
-</div> 
-<div class="clr"></div> 
-</div> 
-</div> 
-<div class="clr"></div> 
-<div class="header"> 
-<div class="logo"> 
-<h1><a href="#">ALUMNI <span>SITE </span><small>Get in Touch 
-easily</small></a></h1> 
-</div> 
-<div class="clr"></div> 
-</div> 
-<div class="content"> 
-<div class="mainbar"> 
-<div class="article"> 
-<h2>POST CAREERS</h2> 
-<div class="clr"></div> 
-<form 
-action="" 
-method="post" 
-enctype="multipart/form-data"> 
-<ol> 
-<li> 
-id="form1" 
-<label for="post_date">Job Posted Date</label> 
-name="form1" 
-50 
-51 
- 
-            <p style="color: red">   <?php echo date('d-m-Y');?></p> 
-               </li> 
- 
-            <li> 
-              <label for="title">Title</label> 
-              <input type="text" id="title" name="title" class="text" /> 
-            </li> 
- 
-            <li> 
-              <label for="comp_name">Company Name</label> 
-              <input type="text" name="comp_name" id="comp_name" required="" 
-class="text"/> 
-            </li> 
- 
- 
-              <li> 
-              <label for="skills">Skills</label> 
-              <textarea cols="23" rows="5" name="skills" id="skills" required="" 
-class="text"></textarea> 
-            </li> 
- 
- 
-              <li> 
-              <label for="int_date">Interview Date</label> 
-               <input type="Date" name="int_date" id="int_date" required="" 
-class="text" /> 
-               </li> 
- 
- 
-              <li> 
-52 
- 
-              <label for="int_detail">Interview Detail</label> 
-              <textarea cols="23" rows="5" name="int_detail" id="int_detail" 
-required="" class="text"></textarea> 
-            </li> 
- 
-              <li> 
-              <label for="num_can">Reqd.Candidates</label> 
-               <input type="text" name="num_can" id="num_can" required="" 
-class="text" /> 
-               </li> 
- 
-               <li> 
-              <label for="desig">Designation</label> 
-               <input type="text" name="desig" id="desig" required="" class="text" /> 
-               </li> 
- 
-                
- 
- 
- 
-<br> 
-             <li> 
-               <input type="submit" name="insert" value="Submit" id="button" 
-align="center" style="color: red" />               
-               <div class="clr"></div> 
-            </li> 
-             
-          </ol> 
- 
- 
-<?php 
-if(isset($_POST["insert"])) 
-{ 
-$title=$_POST['title']; 
-$comp_name=$_POST['comp_name']; 
-$skills=$_POST['skills']; 
-$int_date=$_POST['int_date']; 
-$int_detail=$_POST['int_detail']; 
-$num_can=$_POST['num_can']; 
-$desig=$_POST['desig']; 
-$post_date=date('d-m-Y'); 
-include('db_connect.php'); 
-$sql="INSERT 
-careers(title,comp_name,skills,int_date,int_detail,num_can,desig,post_date) 
-VALUES 
-INTO 
-('$title','$comp_name','$skills','$int_date','$int_detail','$num_can','$desig','$post_da
- te')"; 
-if(mysqli_query($conn,$sql)) 
-{ 
-echo ("<script language='javascript'> 
-window.alert('Posted Successfully'); 
-53 
-window.location.href='careers'; 
-</script>"); 
-} 
-else 
-{ 
-echo '<script language="javascript">'; 
-echo 'alert("Not Posted")'; 
-echo '</script>'; 
-} 
-include("db_close.php"); 
-} 
-?> 
-</form> 
-</div> 
-</div> 
-<div class="footer"> 
-<div class="footer_resize"> 
-<!--     
-<p class="lf"> Copyright &copy; 2019 Alumni Website- All Rights 
-Reserved</p> -->    
-<p class="rf">&nbsp;</p> 
-<div class="clr"></div> 
-</div> 
-54 
-</div> 
-<!-- END PAGE SOURCE --> 
-<div align=center></div></body> 
-</html> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Surendirakumar M - Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Surendirakumar M</h1>
+        <p>Dindigul, India | <a href="mailto:sutrndirakumar2k4@gmail.com">sutrndirakumar2k4@gmail.com</a> | +91 6369191539</p>
+        <p><a href="https://www.linkedin.com/in/surendirakumar-m" target="_blank">LinkedIn Profile</a></p>
+    </header>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I am a Computer Science student with a strong interest in Full-Stack Web Development. I am passionate about creating responsive, user-friendly websites and applications using both front-end and back-end technologies. I am continuously learning and improving my skills to build efficient, scalable solutions and am excited to contribute to impactful web development projects.</p>
+        </section>
+        <section id="education">
+            <h2>Education</h2>
+            <ul>
+                <li><strong>B.Sc. Computer Science</strong> (Expected 2025)<br>Sri Ramakrishna College of Arts and Science, Bharathiar University, Coimbatore, India<br>GPA: 8.6/10.0</li>
+                <li><strong>HSC and SSLC</strong> (Completed 2022)<br>Government Model Higher Secondary School, Kasipalayam<br>Percentage: 65% (HSC), 76% (SSLC)</li>
+            </ul>
+        </section>
+        <section id="projects">
+            <h2>Research Projects</h2>
+            <ul>
+                <li><strong>STEM in Women Empowerment:</strong> Developed a website leveraging AI to provide business ideas in STEM fields, aiding women's professional growth.</li>
+            </ul>
+        </section>
+        <section id="experience">
+            <h2>Experience</h2>
+            <ul>
+                <li><strong>Intern</strong> (Feb 2024)<br>Clover Technologies, Coimbatore, India<br>Coordinated intercollegiate quiz events and departmental activities.</li>
+            </ul>
+        </section>
+        <section id="skills">
+            <h2>Technical Skills</h2>
+            <ul>
+                <li>C, C++, HTML, CSS, Python, Java, SQL, JavaScript</li>
+                <li>React, Node.js, databases</li>
+            </ul>
+        </section>
+        <section id="soft-skills">
+            <h2>Soft Skills</h2>
+            <ul>
+                <li>Team Leadership, Time Management, Problem-Solving, Quick Learning, Slide Presentation</li>
+            </ul>
+        </section>
+        <section id="certifications">
+            <h2>Certifications & Awards</h2>
+            <ul>
+                <li>Drone Building</li>
+                <li>Data Science with Python (IBM)</li>
+                <li>SkillRack, SoloLearn certificates</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>Find me on <a href="https://www.linkedin.com/in/surendirakumar-m" target="_blank">LinkedIn</a></p>
+        <p>Contact: <a href="mailto:sutrndirakumar2k4@gmail.com">sutrndirakumar2k4@gmail.com</a> | +91 6369191539</p>
+    </footer>
+</body>
+</html>
