--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Surendirakumar M</h1>
-        <p>Dindigul, India | <a href="mailto:sutrndirakumar2k4@gmail.com">sutrndirakumar2k4@gmail.com</a> | +91 6369191539</p>
+        <p>Dindigul, India | <a href="mailto:surendirakumar2k4@gmail.com">sutrndirakumar2k4@gmail.com</a> | +91 6369191539</p>
         <p><a href="https://www.linkedin.com/in/surendirakumar-m" target="_blank">LinkedIn Profile</a></p>
     </header>
     <main>
