--- a/index.html
+++ b/index.html
@@ -5,62 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surendirakumar M - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </head>
 <body>
     <header>
         <h1>Surendirakumar M</h1>
-        <p>Dindigul, India | <a href="mailto:surendirakumar2k4@gmail.com">sutrndirakumar2k4@gmail.com</a> | +91 6369191539</p>
+        <p>Dindigul, India | <a href="mailto:sutrndirakumar2k4@gmail.com">sutrndirakumar2k4@gmail.com</a> | +91 6369191539</p>
         <p><a href="https://www.linkedin.com/in/surendirakumar-m" target="_blank">LinkedIn Profile</a></p>
     </header>
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>I am a Computer Science student with a strong interest in Full-Stack Web Development. I am passionate about creating responsive, user-friendly websites and applications using both front-end and back-end technologies. I am continuously learning and improving my skills to build efficient, scalable solutions and am excited to contribute to impactful web development projects.</p>
-        </section>
-        <section id="education">
-            <h2>Education</h2>
-            <ul>
-                <li><strong>B.Sc. Computer Science</strong> (Expected 2025)<br>Sri Ramakrishna College of Arts and Science, Bharathiar University, Coimbatore, India<br>GPA: 8.6/10.0</li>
-                <li><strong>HSC and SSLC</strong> (Completed 2022)<br>Government Model Higher Secondary School, Kasipalayam<br>Percentage: 65% (HSC), 76% (SSLC)</li>
-            </ul>
+            <p>I am a Computer Science student with a strong interest in Full-Stack Web Development. I am passionate about creating responsive, user-friendly websites and applications using both front-end and back-end technologies.</p>
         </section>
         <section id="projects">
-            <h2>Research Projects</h2>
-            <ul>
-                <li><strong>STEM in Women Empowerment:</strong> Developed a website leveraging AI to provide business ideas in STEM fields, aiding women's professional growth.</li>
-            </ul>
+            <h2>Portfolio Works</h2>
+            <div class="gallery">
+                <img src="images/project1.jpg" alt="Project 1">
+                <img src="images/project2.jpg" alt="Project 2">
+                <img src="images/project3.jpg" alt="Project 3">
+            </div>
         </section>
-        <section id="experience">
-            <h2>Experience</h2>
-            <ul>
-                <li><strong>Intern</strong> (Feb 2024)<br>Clover Technologies, Coimbatore, India<br>Coordinated intercollegiate quiz events and departmental activities.</li>
-            </ul>
-        </section>
-        <section id="skills">
-            <h2>Technical Skills</h2>
-            <ul>
-                <li>C, C++, HTML, CSS, Python, Java, SQL, JavaScript</li>
-                <li>React, Node.js, databases</li>
-            </ul>
-        </section>
-        <section id="soft-skills">
-            <h2>Soft Skills</h2>
-            <ul>
-                <li>Team Leadership, Time Management, Problem-Solving, Quick Learning, Slide Presentation</li>
-            </ul>
-        </section>
-        <section id="certifications">
-            <h2>Certifications & Awards</h2>
-            <ul>
-                <li>Drone Building</li>
-                <li>Data Science with Python (IBM)</li>
-                <li>SkillRack, SoloLearn certificates</li>
-            </ul>
+        <section id="three-d">
+            <h2>3D Showcase</h2>
+            <p>Explore my 3D works below:</p>
+            <div id="three-container"></div>
         </section>
     </main>
     <footer>
         <p>Find me on <a href="https://www.linkedin.com/in/surendirakumar-m" target="_blank">LinkedIn</a></p>
         <p>Contact: <a href="mailto:sutrndirakumar2k4@gmail.com">sutrndirakumar2k4@gmail.com</a> | +91 6369191539</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
