--- a/index.html
+++ b/index.html
@@ -9,27 +9,32 @@
 </head>
 <body>
     <header>
-        <h1>Surendirakumar M</h1>
-        <p>Dindigul, India | <a href="mailto:sutrndirakumar2k4@gmail.com">sutrndirakumar2k4@gmail.com</a> | +91 6369191539</p>
-        <p><a href="https://www.linkedin.com/in/surendirakumar-m" target="_blank">LinkedIn Profile</a></p>
+        <div class="profile">
+            <img src="images/profile.jpg" alt="Surendirakumar M">
+            <h1>Surendirakumar M</h1>
+            <p>Dindigul, India | <a href="mailto:sutrndirakumar2k4@gmail.com">sutrndirakumar2k4@gmail.com</a> | +91 6369191539</p>
+            <p><a href="https://www.linkedin.com/in/surendirakumar-m" target="_blank">LinkedIn Profile</a></p>
+        </div>
     </header>
     <main>
         <section id="about">
             <h2>About Me</h2>
             <p>I am a Computer Science student with a strong interest in Full-Stack Web Development. I am passionate about creating responsive, user-friendly websites and applications using both front-end and back-end technologies.</p>
         </section>
-        <section id="projects">
-            <h2>Portfolio Works</h2>
-            <div class="gallery">
-                <img src="images/project1.jpg" alt="Project 1">
-                <img src="images/project2.jpg" alt="Project 2">
-                <img src="images/project3.jpg" alt="Project 3">
+        <section id="three-d">
+            <h2>Interactive 3D Model</h2>
+            <p>Click on the 3D buttons to explore different sections:</p>
+            <div id="three-container"></div>
+            <div class="info">
+                <h3 id="content-title">Soft Skills</h3>
+                <p id="content-description">
+                    Team Leadership, Time Management, Problem-Solving, Quick Learning, Slide Presentation.
+                </p>
             </div>
         </section>
-        <section id="three-d">
-            <h2>3D Showcase</h2>
-            <p>Explore my 3D works below:</p>
-            <div id="three-container"></div>
+        <section id="resume">
+            <h2>Resume</h2>
+            <iframe src="SK_Resume.pdf" width="100%" height="600px"></iframe>
         </section>
     </main>
     <footer>
