--- a/index.html
+++ b/index.html
@@ -4,43 +4,151 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surendirakumar M - Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+        body {
+            background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.6;
+        }
+        header {
+            background: #0078d7;
+            color: #fff;
+            padding: 1rem 0;
+            text-align: center;
+        }
+        header h1 {
+            margin-bottom: 0.5rem;
+        }
+        nav {
+            margin-top: 0.5rem;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 1rem;
+            font-size: 1rem;
+        }
+        section {
+            padding: 2rem;
+        }
+        h2 {
+            color: #0078d7;
+            margin-bottom: 1rem;
+        }
+        ul {
+            list-style: none;
+        }
+        ul li {
+            margin-bottom: 0.5rem;
+        }
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 1rem;
+        }
+        footer {
+            text-align: center;
+            background: #333;
+            color: #fff;
+            padding: 1rem 0;
+        }
+        footer a {
+            color: #0078d7;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
+    <!-- Header Section -->
     <header>
-        <div class="profile">
-            <img src="images/profile.jpg" alt="Surendirakumar M">
-            <h1>Surendirakumar M</h1>
-            <p>Dindigul, India | <a href="mailto:sutrndirakumar2k4@gmail.com">sutrndirakumar2k4@gmail.com</a> | +91 6369191539</p>
-            <p><a href="https://www.linkedin.com/in/surendirakumar-m" target="_blank">LinkedIn Profile</a></p>
-        </div>
+        <h1>Surendirakumar M</h1>
+        <p>Full-Stack Web Developer</p>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#education">Education</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>I am a Computer Science student with a strong interest in Full-Stack Web Development. I am passionate about creating responsive, user-friendly websites and applications using both front-end and back-end technologies.</p>
-        </section>
-        <section id="three-d">
-            <h2>Interactive 3D Model</h2>
-            <p>Click on the 3D buttons to explore different sections:</p>
-            <div id="three-container"></div>
-            <div class="info">
-                <h3 id="content-title">Soft Skills</h3>
-                <p id="content-description">
-                    Team Leadership, Time Management, Problem-Solving, Quick Learning, Slide Presentation.
-                </p>
-            </div>
-        </section>
-        <section id="resume">
-            <h2>Resume</h2>
-            <iframe src="SK_Resume.pdf" width="100%" height="600px"></iframe>
-        </section>
-    </main>
+
+    <!-- About Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I am a Computer Science student with a strong interest in Full-Stack Web Development. I am passionate about creating responsive, user-friendly websites and applications using technologies like HTML, CSS, JavaScript, React, Node.js, and databases. I strive to continuously improve my skills and contribute to impactful projects.</p>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education">
+        <h2>Education</h2>
+        <ul>
+            <li>
+                <strong>Bachelor of Science</strong> (2025) <br>
+                Sri Ramakrishna College of Arts & Science, Coimbatore <br>
+                GPA: 8.6/10
+            </li>
+            <li>
+                <strong>HSC & SSLC</strong> (2022) <br>
+                Government Model Higher Secondary School, Kasipalayam <br>
+                Percentage: 65%, 76%
+            </li>
+        </ul>
+    </section>
+
+    <!-- Technical Skills Section -->
+    <section id="skills">
+        <h2>Technical Skills</h2>
+        <div class="skills-grid">
+            <ul>
+                <li>C (Intermediate)</li>
+                <li>C++ (Intermediate)</li>
+                <li>HTML & CSS (Intermediate)</li>
+                <li>Python (Intermediate)</li>
+            </ul>
+            <ul>
+                <li>Java (Intermediate)</li>
+                <li>SQL (Beginner)</li>
+                <li>JavaScript (Beginner)</li>
+                <li>Quick Learner & Problem Solving</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>Research Projects</h2>
+        <ul>
+            <li><strong>STEM in Women Empowerment</strong> - A website using AI to provide business ideas for women entrepreneurs in STEM fields.</li>
+        </ul>
+    </section>
+
+    <!-- Certifications Section -->
+    <section>
+        <h2>Certifications & Awards</h2>
+        <ul>
+            <li>Drone Building</li>
+            <li>Data Science with Python (IBM)</li>
+            <li>Skill Rack & Solo Learn Certifications</li>
+        </ul>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:sutrndirakumar2k4@gmail.com">sutrndirakumar2k4@gmail.com</a></p>
+        <p>Phone: <a href="tel:+916369191539">+91 6369191539</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/surendirakumar-m" target="_blank">linkedin.com/in/surendirakumar-m</a></p>
+    </section>
+
+    <!-- Footer -->
     <footer>
-        <p>Find me on <a href="https://www.linkedin.com/in/surendirakumar-m" target="_blank">LinkedIn</a></p>
-        <p>Contact: <a href="mailto:sutrndirakumar2k4@gmail.com">sutrndirakumar2k4@gmail.com</a> | +91 6369191539</p>
+        <p>&copy; 2024 Surendirakumar M | Developed with HTML & CSS</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
